# ibasic

./: .gitignore  COPYRIGHT  Makefile  Makefile.am  README  REFERENCES  TinyBASIC_BNF  ast.c  ast.h  colours.h  configure.ac  expression.c  expression.h  iBASIC_BNF  interpreter.c  interpreter.h  interpretter.c  interpretter.h  main.c  parse.c  parse.h  stack.c  stack.h  test.bas  tok_tree.c  tokeniser.c  tokeniser.h  tokid.h  types.h
test/: euclid.bas  test.bas
tests/: array.bas  case.bas  eratosthenes.bas  euclid-names.bas  euclid.bas  fn-proc-namespace-test.bas  for-euclid.bas  local-shadow-array.bas  local-shadow.bas  loop-index.bas  loop.bas  multi-euclid-for.bas  multi_euclid.bas  prime-fn.bas  scope.bas  simple-recurse.bas
